# 🧭📦 protobufs-rust: Rust crate for the generated protobufs for Noelware Analytics
# Copyright (c) 2022 Noelware
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
#  furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "protobufs-rust"
version = "0.1.0"
edition = "2021"
authors = ["Noel <cutie@floofy.dev>", "Noelware <team@noelware.org>"]
description = "🧭📦 Rust crate for the generated protobufs for Noelware Analytics"
license = "MIT"

[dependencies]
prost = "0.10.3"
prost-types = "0.10.1"
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"
walkdir = "2.3.2"
